<resources>
    <string name="app_name">A+A Helmet Lock</string>

    <!--BLE-->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <!--Labels-->
    <string name="label_data">Data:</string>
    <string name="label_state">Status : </string>
    <string name="no_data">No data</string>
    <string name="connected"> Connected</string>
    <string name="disconnected"> Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>

    <!--Unknowns-->
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="settings">Settings</string>

    <!--Helmet Buttons-->
    <string name="unlock_this_helmet">Unlock Helmet</string>
    <string name="unlock"> | Unlocked</string>
    <string name="lock"> | Locked</string>
    <string name="lock_this_helmet">Lock Helmet</string>
    <string name="close_popup_btn">X</string>
    <string name="label_device_name">Device Name : </string>
    <string name="label_device_data">Device Data : </string>
    <string name="label_device_address">Device Address : </string>

</resources>
