<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <Button
            android:id="@+id/helmet_button"
            android:layout_width="117dp"
            android:layout_height="123dp"
            android:layout_gravity="end"
            android:layout_marginEnd="38dp"
            android:background="@drawable/helmeticon"
            android:focusable="false"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edge"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/close_popup_window"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:background="#F60"
            android:paddingEnd="0dp"
            android:text="@string/close_popup_btn"
            android:textColor="#FFF"
            android:typeface="normal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="19dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_edge"
            android:orientation="horizontal">

            <Button
                android:id="@+id/popup_settings_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:background="@drawable/info_icon"
                android:focusable="false" />

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/UnlockLock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F60"
                android:gravity="bottom|center|top"
                android:text="@string/unlock_this_helmet"
                android:textColor="#FFF"
                android:typeface="normal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/info_popup_window"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_state"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:typeface="normal" />

                <TextView
                    android:id="@+id/DisconnectedText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/disconnected"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    android:typeface="normal" />


                <Space
                    android:layout_width="25dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/battery_indicator"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/battery_full_icon"
                    android:textColor="#FFF"
                    android:typeface="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/popup_device_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_device_name"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:typeface="normal" />

                <TextView
                    android:id="@+id/device_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    android:typeface="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/popup_device_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_device_data"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:typeface="normal" />

                <TextView
                    android:id="@+id/device_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    android:typeface="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/popup_device_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_device_address"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:typeface="normal" />

                <TextView
                    android:id="@+id/device_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    android:typeface="normal" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="195dp">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:indeterminate="true" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>